--- a/app/src/main/res/layout/list_item_my_contact.xml
+++ b/app/src/main/res/layout/list_item_my_contact.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contact_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:padding="10dp"
+    >
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/prof_pic"
@@ -42,13 +44,5 @@
 
 
     </LinearLayout>
-
-    <CheckBox
-        android:id="@+id/chooser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:visibility="gone"/>
 
 </RelativeLayout>
