Adding notification try handler class for new method of chat invitation

--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,8 @@
             android:textSize="18sp"
             android:visibility="gone" />
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -38,19 +40,18 @@
 
             <TextView
                 android:id="@+id/wishMessage"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="MAC Address - The physical address of the WAN port, as seen from the Internet. IP Address - The current WAN (Internet) IP Address. This field will be blank or 0.0.0.0 if the IP Address is assigned dynamically and there is no connection to Internet."
+                android:text="@string/long_text"
                 android:textColor="@color/messageTextColor"
                 android:textSize="18sp"
                 android:typeface="sans"
                 android:layout_marginTop="5dp" />
 
-            <FrameLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@+id/wishMessage">
+                >
 
                 <TextView
                     android:id="@+id/dateTime"
@@ -63,20 +64,21 @@
                     android:text="13 May 2017, 1:19 AM"
                     android:textColor="@color/timeTextColor"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
                     />
 
                 <ImageView
                     android:id="@+id/receive_status"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_gravity="right"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/ic_thumb_up" />
+                    android:src="@drawable/ic_thumb_up"
+                    android:layout_gravity="right"/>
 
-            </FrameLayout>
+            </LinearLayout>
 
-        </RelativeLayout>
-
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
