--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/notification_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="John would like to invite you to a chat."
+        android:padding="10dp"
+        android:textSize="14sp"
         />
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:padding="1dp">
+
+       <android.support.v7.widget.AppCompatButton
+           android:id="@+id/notification_accept"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="0.5"
+           android:text="Accept"
+           android:background="@drawable/button_shape"
+           android:layout_margin="2dp"
+           />
+
+       <android.support.v7.widget.AppCompatButton
+           android:id="@+id/notification_reject"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="0.5"
+           android:text="Reject"
+           android:background="@drawable/button_shape"
+           android:layout_margin="2dp"
+           />
+
+   </LinearLayout>
 
 
 </LinearLayout>
