--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -17,7 +17,8 @@
         android:id="@+id/empty_notifications"
         android:layout_centerInParent="true"
         android:textSize="18sp"
-        android:visibility="gone"/>
+        android:text="@string/empty_notification"
+        />
 
 
 </RelativeLayout>
