Test: notification for invite now can be accepted/rejected and handled directly from contact activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <color name="red">#fd0000</color>
+    <color name="green">#67de19</color>
     <color name="black">#333333</color>
     <color name="my_msg_bg">#b1d69c</color>
     <color name="sender_msg_bg">#b7b7b7</color>
