--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bottom_border">
 
     <TextView
         android:id="@+id/notification_msg"
@@ -24,8 +25,9 @@
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Accept"
-           android:background="@drawable/button_shape"
+           android:background="@drawable/bottom_border"
            android:layout_margin="2dp"
+           android:textColor="@color/green"
            />
 
        <android.support.v7.widget.AppCompatButton
@@ -34,7 +36,8 @@
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Reject"
-           android:background="@drawable/button_shape"
+           android:textColor="@color/red"
+           android:background="@drawable/bottom_border"
            android:layout_margin="2dp"
            />
 
