Update notification item UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="profile_save_button">#224488</color>
 
     <color name="button_color">#3f94df</color>
+    <color name="notification_bck">#dcd9d9</color>
 </resources>
