--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_border">
+    android:background="@color/notification_bck">
 
     <TextView
         android:id="@+id/notification_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="John would like to invite you to a chat."
         android:padding="10dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:textColor="@color/white"
         />
 
    <LinearLayout
@@ -26,7 +26,7 @@
            android:layout_weight="0.5"
            android:text="Accept"
            android:background="@drawable/bottom_border"
-           android:layout_margin="2dp"
+           android:layout_margin="1dp"
            android:textColor="@color/green"
            />
 
@@ -38,7 +38,7 @@
            android:text="Reject"
            android:textColor="@color/red"
            android:background="@drawable/bottom_border"
-           android:layout_margin="2dp"
+           android:layout_margin="1dp"
            />
 
    </LinearLayout>
