--- a/app/src/main/res/layout/fragment_group_session.xml
+++ b/app/src/main/res/layout/fragment_group_session.xml
@@ -11,4 +11,14 @@
         android:layout_height="match_parent"
         />
 
+    <TextView
+        android:id="@+id/no_chats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No group chats"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="25sp"
+        android:visibility="gone"/>
+
 </RelativeLayout>
