Add support or active and inactive users

--- a/app/src/main/res/layout/list_item_my_contact.xml
+++ b/app/src/main/res/layout/list_item_my_contact.xml
@@ -45,4 +45,14 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/active"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_active"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/green"/>
+
 </RelativeLayout>
