--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/view_details"
         android:title="View Details"
+        android:visible="false"
         />
 
 </menu>
