--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -23,6 +23,13 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
             <ImageView
                 android:id="@+id/expandedImage"
                 android:layout_width="match_parent"
@@ -31,13 +38,6 @@
                 android:src="@drawable/unknown"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -78,7 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Username: john"
+                    android:text="Username: "
                     android:textAppearance="@android:style/TextAppearance.Medium" />
 
                 <TextView
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Profile Name: Johnny Morry"
+                    android:text="Profile Name: "
                     android:textAppearance="@android:style/TextAppearance.Medium" />
 
                 <TextView
@@ -94,7 +94,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Profile Status: Available"
+                    android:text="Profile Status: "
                     android:textAppearance="@android:style/TextAppearance.Medium" />
             </LinearLayout>
 
