--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.naziur.androidchat.activities.ChatDetailActivity">
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -23,21 +23,21 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
 
+            <ImageView
+                android:id="@+id/expandedImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/unknown"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7" />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-            <ImageView
-                android:id="@+id/expandedImage"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/app_bar_height"
-                android:scaleType="centerCrop"
-                android:src="@drawable/unknown"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -48,7 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.journaldev.collapsingtoolbarlayout.ScrollingActivity"
         tools:showIn="@layout/activity_chat_detail">
 
         <LinearLayout
@@ -138,7 +137,7 @@
                         android:layout_centerInParent="true"
                         android:padding="10dp"
                         android:text="No Groups"
-                         />
+                        />
 
                 </RelativeLayout>
             </LinearLayout>
@@ -195,6 +194,7 @@
 
             </LinearLayout>
         </LinearLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 
