--- a/app/src/main/res/layout/system_message_cell.xml
+++ b/app/src/main/res/layout/system_message_cell.xml
@@ -31,7 +31,7 @@
         android:padding="10dp">
 
     <TextView
-        android:id="@+id/system_message"
+        android:id="@+id/wishMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Test System Message"
