Add group view support to profile and chat details + fixed minor issues in session fragments + need to test delete all messages and pictures functions for group fragment

--- a/app/src/main/res/layout/list_item_my_contact.xml
+++ b/app/src/main/res/layout/list_item_my_contact.xml
@@ -40,7 +40,10 @@
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username"/>
+            android:text="username"
+            android:maxLines="1"
+            android:ellipsize="marquee"
+            />
 
 
     </LinearLayout>
