--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -124,11 +124,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ListView
+                    <android.support.v7.widget.RecyclerView
                         android:id="@+id/chat_groups_list"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"/>
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/no_groups"
