Fixed receiving messages to show name of sender for group messages

--- a/app/src/main/res/layout/receiving_image_message_cell.xml
+++ b/app/src/main/res/layout/receiving_image_message_cell.xml
@@ -66,10 +66,10 @@
                 android:id="@+id/sender_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/dateTime"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="3dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="3dp"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
