--- a/app/src/main/res/layout/receiving_image_message_cell.xml
+++ b/app/src/main/res/layout/receiving_image_message_cell.xml
@@ -75,7 +75,8 @@
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:text="Bob"
-                android:textColor="@color/timeTextColor" />
+                android:textColor="@color/timeTextColor"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
