GroupDetailsActivity in prograss

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="profile_camera_button">#f17110</color>
     <color name="profile_save_button">#224488</color>
     <color name="system_msg_color">#cbeff7</color>
+    <color name="group_detail_bg">#394263</color>
+    <color name="group_detail_tint">#635fc6dc</color>
 
     <color name="button_color">#3f94df</color>
     <color name="notification_bck">#dcd9d9</color>
