--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
 
     <color name="button_color">#3f94df</color>
     <color name="notification_bck">#dcd9d9</color>
+
+    <color name="login_btn">#6fd5b6</color>
+
 </resources>
