Updated profile activity design

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
                     android:ems="10"
                     android:hint="Username"
                     android:inputType="textPersonName"
-                    android:background="@null"
+                    android:background="@drawable/bottom_border_white"
                     android:padding="15dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
@@ -81,7 +81,7 @@
                     android:ems="10"
                     android:hint="Profile Name (New User Only)"
                     android:inputType="textPersonName"
-                    android:background="@null"
+                    android:background="@drawable/bottom_border_white"
                     android:padding="15dp"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/white"
