--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:elevation="10dp"
     >
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,49 +12,92 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/unknown" />
-
-    <ImageButton
-        android:id="@+id/update_profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_camera"
-        android:layout_alignRight="@+id/image_header"
-        android:layout_alignEnd="@+id/image_header"
-        android:layout_alignBottom="@+id/image_header"
-        android:background="@drawable/header_icon_round"
-        android:layout_margin="10dp"
-        android:padding="8dp"
-        android:clickable="true"
+        android:src="@drawable/profile_bck"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         />
 
-    <ImageButton
-        android:id="@+id/undo_profile_pic"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_revert"
-        android:background="@drawable/header_icon_round"
-        android:padding="8dp"
-        android:clickable="true"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_alignTop="@+id/update_profile_pic"
-        android:layout_toLeftOf="@+id/update_profile_pic"
-        android:layout_toStartOf="@+id/update_profile_pic"/>
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <ImageButton
-        android:id="@+id/reset_profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_popup_sync"
-        android:background="@drawable/header_icon_round"
-        android:padding="8dp"
-        android:clickable="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_alignTop="@+id/undo_profile_pic"
-        android:layout_toLeftOf="@+id/undo_profile_pic"
-        android:layout_toStartOf="@+id/undo_profile_pic"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/update_profile_pic"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:src="@drawable/unknown"
+            />
 
+        <TextView
+            android:id="@+id/prof_info_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:shadowColor="#000000"
+            android:shadowDx="1.5"
+            android:shadowDy="1.3"
+            android:shadowRadius="1.6"
+            />
+
+        <TextView
+            android:id="@+id/prof_info_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:shadowColor="#000000"
+            android:shadowDx="1.5"
+            android:shadowDy="1.3"
+            android:shadowRadius="1.6"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/undo_profile_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Undo"
+                android:background="@drawable/rounded_shadow"
+                android:padding="5dp"
+                android:textColor="#8eb93d"
+                android:shadowColor="#000000"
+                android:shadowDx="1.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
+                android:clickable="true"
+                android:textAlignment="center"
+                android:layout_margin="2dp"
+                />
+
+            <TextView
+                android:id="@+id/reset_profile_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reset"
+                android:background="@drawable/rounded_shadow"
+                android:padding="5dp"
+                android:maxLines="1"
+                android:textColor="#FF8EB93D"
+                android:shadowColor="#000000"
+                android:shadowDx="1.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
+                android:clickable="true"
+                android:textAlignment="center"
+                android:layout_margin="2dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
